--- a/main.html
+++ b/main.html
@@ -5,36 +5,39 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="css/do.css" rel="stylesheet">
-<style>
-body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
-</style>
 <body>
 
 <!-- Page content -->
 <div id = "pic1" class="w3-content" >
 
   <!-- Automatic Slideshow Images -->
-  <div class="mySlides w3-display-container w3-center">
+  <div class="mySlides w3-center">
     <img src="tar1.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>
+    <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32">
+      <h3 id = "text1">The Anniversary 5 years 8 months</h3>
+      <div class="w3-container">
+        <span class="pull-right">Guitar</span>
+        <p class="heart">
+          <i class="fa fa-heart fa-4x fa-beat w3-display-middle"></i>
+        </p>
+      </div>
     </div>
   </div>
-  <div class="mySlides w3-display-container w3-center">
+  <div class="mySlides w3-center">
     <img src="tar2.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>New York</h3>
+    <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32">
+      <h3 id = "text2">The Anniversary 5 years 8 months</h3>
       <p><b>The atmosphere in New York is lorem ipsum.</b></p>
     </div>
   </div>
-  <div class="mySlides w3-display-container w3-center">
+  <div class="mySlides w3-center">
     <img src="tar3.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Chicago</h3>
+      <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32">
+      <h3 id = "text3">The Anniversary 5 years 8 months</h3>
       <p><b>Thank you, Chicago - A night we won't forget.</b></p>
     </div>
   </div>
