--- a/main.html
+++ b/main.html
@@ -17,28 +17,41 @@
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-center">
     <img src="tar1.jpg" style="width:100%">
-    <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32">
+    <div class="w3-display-topleft w3-container w3-text-white w3-padding-32">
       <h3 id = "text1">The Anniversary 5 years 8 months</h3>
-      <div class="w3-container">
-        <span class="pull-right">Guitar</span>
+      <div id = "test">
+        <span class="pull-right">GUITAR</span>
+        <span class="pull-left">CARERY</span>
         <p class="heart">
-          <i class="fa fa-heart fa-4x fa-beat w3-display-middle"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
         </p>
       </div>
     </div>
   </div>
   <div class="mySlides w3-center">
     <img src="tar2.jpg" style="width:100%">
-    <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32">
-      <h3 id = "text2">The Anniversary 5 years 8 months</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>
+    <div class="w3-display-topleft w3-container w3-text-white w3-padding-32">
+      <h3 id = "text1">The Anniversary 5 years 8 months</h3>
+      <div id = "test">
+        <span class="pull-right">GUITAR</span>
+        <span class="pull-left">CARERY</span>
+        <p class="heart">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+      </div>
     </div>
   </div>
   <div class="mySlides w3-center">
     <img src="tar3.jpg" style="width:100%">
-      <div class="w3-display-topmiddle w3-container w3-text-white w3-padding-32">
-      <h3 id = "text3">The Anniversary 5 years 8 months</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>
+      <div class="w3-display-topleft w3-container w3-text-white w3-padding-32">
+      <h3 id = "text1">The Anniversary 5 years 8 months</h3>
+      <div id = "test">
+        <span class="pull-right">GUITAR</span>
+        <span class="pull-left">CARERY</span>
+        <p class="heart">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+      </div>
     </div>
   </div>
 
