--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 <div id = "pic1" class="w3-content" >
 
   <!-- Automatic Slideshow Images -->
-  <div class="mySlides w3-center">
+  <div class="mySlides w3-center w3-animate-top">
     <img src="tar1.jpg" style="width:100%">
     <div class="w3-display-topleft w3-container w3-text-white w3-padding-32">
       <h3 id = "text1">The Anniversary 5 years 8 months</h3>
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <div class="mySlides w3-center">
+  <div class="mySlides w3-center w3-animate-top">
     <img src="tar2.jpg" style="width:100%">
     <div class="w3-display-topleft w3-container w3-text-white w3-padding-32">
       <h3 id = "text1">The Anniversary 5 years 8 months</h3>
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div>
-  <div class="mySlides w3-center">
+  <div class="mySlides w3-center w3-animate-top">
     <img src="tar3.jpg" style="width:100%">
       <div class="w3-display-topleft w3-container w3-text-white w3-padding-32">
       <h3 id = "text1">The Anniversary 5 years 8 months</h3>
