--- a/main.html
+++ b/main.html
@@ -62,14 +62,84 @@
 
 <div class="container">
   <div class="row">
-    <div class="col bg-dark text-white p-2 m-3">
+    <div class="col bg-danger text-light p-2 m-3">
         <i id = "timer" class="fa fa-clock w3-center"></i>
         <p class = "w3-center gg">TIMELINE</p>
     </div>
   </div>
 </div>
 
+<!-- timeline -------------------------------------------------------------------------------->
 
+<section class="showcase">
+  <div class="container-fliud p-0">
+    <div class="row g-0">
+      <div class="col showcase-img1"></div>
+      <div class="col text-center showcase-text">
+        <p class="heet">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+        <span class="pull-text">Year Anv.</span>
+      </div>
+    </div>
+
+    <div class="row g-0">
+      <div class="col order-2 showcase-img2"></div>
+      <div class="col order-1 text-center showcase-text">
+        <p class="heet">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+        <span class="pull-text">Years Anv.</span>
+      </div>
+      </div>
+    </div>
+
+    <div class="row g-0">
+      <div class="col showcase-img3"></div>
+      <div class="col text-center showcase-text">
+        <p class="heet">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+        <span class="pull-text">Years Anv.</span>
+      </div>
+    </div>
+
+    <div class="row g-0">
+      <div class="col order-2 showcase-img4"></div>
+      <div class="col order-1 text-center showcase-text">
+        <p class="heet">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+        <p class="heet">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+        <span class="pull-text">Years Anv.</span>
+      </div>
+    </div>
+
+    <div class="row g-0">
+      <div class="col showcase-img5"></div>
+      <div class="col text-center showcase-text">
+        <p class="heet">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+        <p class="heet">
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+          <i class="fa fa-heart fa-4x fa-beat"></i>
+        </p>
+        <span class="pull-text">Years Anv.</span>
+      </div>
+    </div>
+
+  </div>
+</section>
 
 <script>
 // Automatic Slideshow - change image every 4 seconds
