--- a/main.html
+++ b/main.html
@@ -141,6 +141,34 @@
   </div>
 </section>
 
+
+<!--- countdown ------------------------------------------------------------------------------->
+
+
+<div class="container">
+  <div class="row">
+    <div class="col bg-danger text-light p-2 m-3">
+        <i id = "timer1" class="fa fa-calendar w3-center"></i>
+        <p class = "w3-center gg">COUNTDOWN TO 6 YEARS ANNIVERSARY</p>
+    </div>
+  </div>
+</div>
+
+<header class = "text-center">
+  <div class="container">
+    <div class="row">
+      <div class="mx-auto">
+        <p id="day" class = "gap"></p>
+        <p id="hours" class = "gap"></p>
+        <p id="min" class = "gap"></p>
+        <p id="sec" class = "gap"></p>
+      </div>
+    </div>
+  </div>
+</header>
+
+
+
 <script>
 // Automatic Slideshow - change image every 4 seconds
 var myIndex = 0;
@@ -157,6 +185,39 @@ function carousel() {
   x[myIndex-1].style.display = "block";
   setTimeout(carousel, 4000);
 }
+
+
+
+// Set the date we're counting down to
+var countDownDate = new Date("Feb 13, 2021 0:0:0").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Output the result in an element with id="demo"
+  document.getElementById("day").innerHTML = days + " Days";
+  document.getElementById("hours").innerHTML = hours + "<br> Hours";
+  document.getElementById("min").innerHTML = minutes + " Minutes ";
+  document.getElementById("sec").innerHTML = seconds + " Seconds ";
+
+  // If the count down is over, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
 </script>
 
 </body>
