--- a/main.html
+++ b/main.html
@@ -149,15 +149,20 @@
   <div class="row">
     <div class="col bg-danger text-light p-2 m-3">
         <i id = "timer1" class="fa fa-calendar w3-center"></i>
-        <p class = "w3-center gg">COUNTDOWN TO 6 YEARS ANNIVERSARY</p>
+        <p class = "w3-center gg">COUNTDOWN</p>
     </div>
   </div>
 </div>
 
-<header class = "text-center">
+<header>
   <div class="container">
     <div class="row">
-      <div class="mx-auto">
+      <div class="col text-center">
+        <p class = "moji">6 Years Anniversary</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="mx-auto text-center">
         <p id="day" class = "gap"></p>
         <p id="hours" class = "gap"></p>
         <p id="min" class = "gap"></p>
