--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="author" content="colorlib.com">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,800" rel="stylesheet" />
-    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/main1.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
   </head>
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -24,10 +25,15 @@
       });
     });
     </script>
+
+    <video autoplay muted loop id="myVideo">
+      <source src="video1.mp4" type="video/mp4">
+    </video>
+
     <div class="s006">
       <form>
         <fieldset>
-          <legend id = "text">กรอกรหัสผ่าน 6 หลัก ?</legend>
+          <legend id="text">กรอกรหัสผ่าน 6 หลัก ?</legend>
           <div class="inner-form">
             <div class="input-field">
               <button class="btn-search" type="button" id = "confirm">
@@ -41,5 +47,6 @@
         </fieldset>
       </form>
     </div>
+
   </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
